--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,6 @@
     "module": "commonjs",
     "target": "es6"
   },
-  "include": ["vifront/**/*", "allcode.js"],
-  "exclude": ["node_modules", "temp", "*UCODE*", "y*", "_ignore", "*hallo*", "**/*closure.js"]
+  "include": ["allglobals.js", "allfuncs.js"],
+  "exclude": ["node_modules", "temp", "*UCODE*", "y*", "_ignore", "*hallo*", "**/*closure.js","*muell"]
 }
