--- a/y/db.yaml
+++ b/y/db.yaml
@@ -497,6 +497,10 @@ appdata:
       steps: 15
     - d: 29.4.23
       steps: 21
+      e: 6,13
+    - d: 30.4.23
+      steps: 13
+      e: 6,15
   howto:
     - kw: k92
       c: hallo92
