--- a/y/db.yaml
+++ b/y/db.yaml
@@ -497,10 +497,13 @@ appdata:
       steps: 15
     - d: 29.4.23
       steps: 21
-      e: 6,13
+      e: 6-13
     - d: 30.4.23
       steps: 13
-      e: 6,15
+      e: 6-15
+    - d: 1.5.23
+      steps: 25
+      e: 6-13
   howto:
     - kw: k92
       c: hallo92
