--- a/y/db.yaml
+++ b/y/db.yaml
@@ -504,6 +504,9 @@ appdata:
     - d: 1.5.23
       steps: 25
       e: 6-13
+    - d: 2.5.23
+      steps: 24
+      e: 6-13
   howto:
     - kw: k92
       c: hallo92
