--- a/y/db.yaml
+++ b/y/db.yaml
@@ -528,6 +528,9 @@ appdata:
     - d: 9.5.23
       steps: 21
       e: 7-15
+    - d: 10.5.23
+      steps: 16
+      e: 7-17
   howto:
     - kw: k92
       c: hallo92
