--- a/nature/jsconfig.json
+++ b/nature/jsconfig.json
@@ -4,5 +4,5 @@
     "target": "es6"
   },
   "include": ["../**/*"],
-  "exclude": ["../*_*","../base/*","../MUELL.js","../test.js"],
+  "exclude": ["*MUELL*", "*FAIL.js", "*0", "base","node_modules", "temp", "*UCODE*", "y*", "_ignore", "_weg", "_other", "*hallo*", "**/*closure.js","*muell"]
 }
