--- a/y/db.yaml
+++ b/y/db.yaml
@@ -552,6 +552,15 @@ appdata:
     - d: 17.5.23
       steps: 26
       e: 5-17
+    - d: 18.5.23
+      steps: 24
+      e: 5-17
+    - d: 19.5.23
+      steps: 24
+      e: 5-15
+    - d: 20.5.23
+      steps: 24
+      e: 5-14
   howto:
     - kw: k92
       c: hallo92
