--- a/pico0/jsconfig.json
+++ b/pico0/jsconfig.json
@@ -3,6 +3,6 @@
     "module": "commonjs",
     "target": "es6"
   },
-  //"include": ["../**/*", "allglobals.js", "allfuncs.js"],
+  //"include": ["../**/*"],
   //"exclude": ["*MUELL*", "*FAIL.js", "*0", "base", "node_modules", "temp", "*UCODE*", "y*", "_ignore", "_weg", "_other", "*hallo*", "**/*closure.js","*muell"]
 }
