--- a/_weg/jsconfig.json
+++ b/_weg/jsconfig.json
@@ -3,6 +3,6 @@
     "module": "commonjs",
     "target": "es6"
   },
-  "include": ["**/*","../**/allfuncs.js","../allfuncs.js","allfuncs.js"],
+  "include": ["**/*","../**/allfuncs.js","../allf.js","allfuncs.js"],
   "exclude": ["../*_*","../base/*","../MUELL.js","../test.js"],
 }
