--- a/y/db.yaml
+++ b/y/db.yaml
@@ -603,6 +603,15 @@ appdata:
     - d: 3.6.23
       steps: 16
       e: 5-14
+    - d: 4.6.23
+      steps: 16
+      e: 5-14
+    - d: 5.6.23
+      steps: 16
+      e: 5-14
+    - d: 6.6.23
+      steps: 16
+      e: 5-14
   howto:
     - kw: k92
       c: hallo92
