--- a/y/db.yaml
+++ b/y/db.yaml
@@ -612,6 +612,9 @@ appdata:
     - d: 6.6.23
       steps: 16
       e: 5-14
+    - d: 6.6.23
+      steps: 29
+      e: 5-14
   howto:
     - kw: k92
       c: hallo92
