--- a/y/db.yaml
+++ b/y/db.yaml
@@ -612,8 +612,14 @@ appdata:
     - d: 6.6.23
       steps: 16
       e: 5-14
-    - d: 6.6.23
+    - d: 7.6.23
       steps: 29
+      e: 5-14
+    - d: 8.6.23
+      steps: 16
+      e: 5-16
+    - d: 9.6.23
+      steps: 12
       e: 5-14
   howto:
     - kw: k92
