--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^16.1.4",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "openai": "^3.3.0"
   }
 }
